fix: BIM-37664 fixed missing border

--- a/projects/table/src/components/system/table-body-row-container/table-body-row-container.component.scss
+++ b/projects/table/src/components/system/table-body-row-container/table-body-row-container.component.scss
@@ -30,6 +30,7 @@
     position: absolute;
     right: -1px;
     top: 0;
+    z-index: 2;
   }
 
   @include host-selector('.table-body__scrollable-container') {
